--- a/neonavigation/package.xml
+++ b/neonavigation/package.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="2.0"?>
 <package>
   <name>neonavigation</name>
   <version>0.0.0</version>
@@ -10,10 +10,14 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   
-  <run_depend>planner_cspace</run_depend>
-  <run_depend>costmap_cspace</run_depend>
-  <run_depend>neonavigation_launch</run_depend>
-  <run_depend>safety_limiter</run_depend>
+  <exec_depend>costmap_cspace</exec_depend>
+  <exec_depend>map_organizer</exec_depend>
+  <exec_depend>neonavigation_launch</exec_depend>
+  <exec_depend>obj_to_pointcloud</exec_depend>
+  <exec_depend>panner_cspace</exec_depend>
+  <exec_depend>safety_limiter</exec_depend>
+  <exec_depend>track_odometry</exec_depend>
+  <exec_depend>trajectory_tracker</exec_depend>
 
   <export>
     <metapackage/>
