--- a/neonavigation_launch/CMakeLists.txt
+++ b/neonavigation_launch/CMakeLists.txt
@@ -5,10 +5,9 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 catkin_package(
-	CATKIN_DEPENDS costmap_cspace planner_cspace
+	CATKIN_DEPENDS
 )
 
 install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
 )
-
