--- a/track_odometry/CMakeLists.txt
+++ b/track_odometry/CMakeLists.txt
@@ -1,12 +1,30 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(track_odometry)
 
-find_package(catkin REQUIRED COMPONENTS
-	roscpp tf sensor_msgs std_msgs nav_msgs trajectory_msgs geometry_msgs rostest roslint
+find_package(catkin REQUIRED
+  COMPONENTS
+    roscpp
+    roslint
+    rostest
+
+    geometry_msgs
+    nav_msgs
+    sensor_msgs
+    std_msgs
+    tf
+    trajectory_msgs
 )
 
 catkin_package(
-	CATKIN_DEPENDS roscpp tf sensor_msgs std_msgs nav_msgs trajectory_msgs geometry_msgs rostest
+  CATKIN_DEPENDS
+    roscpp
+
+    geometry_msgs
+    nav_msgs
+    sensor_msgs
+    std_msgs
+    tf
+    trajectory_msgs
 )
 
 find_package(Eigen3 REQUIRED)
@@ -15,11 +33,11 @@ include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
 CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
 if(COMPILER_SUPPORTS_CXX11)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 elseif(COMPILER_SUPPORTS_CXX0X)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 else()
-	message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+  message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 
 
@@ -27,18 +45,20 @@ include_directories(${catkin_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR} include)
 
 add_executable(track_odometry src/track_odometry.cpp)
 target_link_libraries(track_odometry ${catkin_LIBRARIES})
+add_dependencies(track_odometry ${catkin_EXPORTED_TARGETS})
 
 add_executable(tf_projection src/tf_projection.cpp)
 target_link_libraries(tf_projection ${catkin_LIBRARIES})
+add_dependencies(tf_projection ${catkin_EXPORTED_TARGETS})
 
 
 roslint_cpp()
 
 if(CATKIN_ENABLE_TESTING)
-	find_package(rostest REQUIRED)
+  find_package(rostest REQUIRED)
 
-	catkin_add_gtest(tf_projection_test test/tf_projection_test.cpp)
-	target_link_libraries(tf_projection_test ${catkin_LIBRARIES})
+  catkin_add_gtest(tf_projection_test test/tf_projection_test.cpp)
+  target_link_libraries(tf_projection_test ${catkin_LIBRARIES})
 
   roslint_add_test()
 endif()
