Fix dockerfile to check dependencies

--- a/Dockerfile.kinetic
+++ b/Dockerfile.kinetic
@@ -1,29 +1,11 @@
-FROM ros:kinetic
+FROM ros:kinetic-ros-core
 
 RUN apt-get -qq update \
   && apt-get install -y --no-install-recommends \
     curl \
-    libavcodec-dev \
-    libavutil-dev \
-    libgstreamer1.0 \
-    libpcl-dev \
-    libqt5gui5 \
-    libqtgui4 \
-    libyaml-cpp-dev \
     libxml2-utils \
     python-pip \
-    python-vtk6 \
-    qt5-qmake \
-    qtbase5-dev \
-    qtbase5-dev-tools \
-    qtchooser \
-    qtcore4-l10n \
-    qttools5-dev \
-    qttools5-private-dev \
     sudo \
-    tcl-dev \
-    tk-dev \
-    vtk6 \
     wget \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
