Fix manifest format

--- a/track_odometry/package.xml
+++ b/track_odometry/package.xml
@@ -1,5 +1,5 @@
-<?xml version="2.0"?>
-<package>
+<?xml version="1.0"?>
+<package format="2">
   <name>track_odometry</name>
   <version>0.0.0</version>
   <description>The track_odometry package</description>
