--- a/costmap_cspace/package.xml
+++ b/costmap_cspace/package.xml
@@ -1,5 +1,5 @@
-<?xml version="2.0"?>
-<package>
+<?xml version="1.0"?>
+<package format="2">
   <name>costmap_cspace</name>
   <version>0.0.0</version>
   <description>The costmap package</description>
