--- a/map_organizer/package.xml
+++ b/map_organizer/package.xml
@@ -1,5 +1,5 @@
-<?xml version="2.0"?>
-<package>
+<?xml version="1.0"?>
+<package format="2">
   <name>map_organizer</name>
   <version>0.1.0</version>
   <description>map_organizer</description>
