--- a/neonavigation/package.xml
+++ b/neonavigation/package.xml
@@ -1,5 +1,5 @@
-<?xml version="2.0"?>
-<package>
+<?xml version="1.0"?>
+<package format="2">
   <name>neonavigation</name>
   <version>0.0.0</version>
   <description>The neonavigation package</description>
