--- a/neonavigation_launch/package.xml
+++ b/neonavigation_launch/package.xml
@@ -1,5 +1,5 @@
-<?xml version="2.0"?>
-<package>
+<?xml version="1.0"?>
+<package format="2">
   <name>neonavigation_launch</name>
   <version>0.0.0</version>
   <description>The neonavigation_launch package</description>
