--- a/obj_to_pointcloud/package.xml
+++ b/obj_to_pointcloud/package.xml
@@ -1,5 +1,5 @@
-<?xml version="2.0"?>
-<package>
+<?xml version="1.0"?>
+<package format="2">
   <name>obj_to_pointcloud</name>
   <version>0.1.0</version>
   <description>OBJ file to pointcloud message</description>
