--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -1,5 +1,5 @@
-<?xml version="2.0"?>
-<package>
+<?xml version="1.0"?>
+<package format="2">
   <name>planner_cspace</name>
   <version>0.0.0</version>
   <description>The planner package</description>
