--- a/safety_limiter/package.xml
+++ b/safety_limiter/package.xml
@@ -1,5 +1,5 @@
-<?xml version="2.0"?>
-<package>
+<?xml version="1.0"?>
+<package format="2">
   <name>safety_limiter</name>
   <version>0.1.0</version>
   <description>Motion limiter for collision prevention</description>
