Fix header dependency definition

--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -21,6 +21,7 @@
   <depend>sensor_msgs</depend>
   <depend>tf</depend>
 
+  <depend>costmap_cspace</depend>
   <depend>costmap_cspace_msgs</depend>
   <depend>planner_cspace_msgs</depend>
 </package>
