Fix license in manifest and unify package version

--- a/costmap_cspace/package.xml
+++ b/costmap_cspace/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
   <name>costmap_cspace</name>
-  <version>0.0.0</version>
-  <description>The costmap package</description>
+  <version>0.1.0</version>
+  <description>3-dof configuration space costmap package</description>
 
   <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
   <license>BSD</license>
