--- a/map_organizer/package.xml
+++ b/map_organizer/package.xml
@@ -2,10 +2,10 @@
 <package>
   <name>map_organizer</name>
   <version>0.1.0</version>
-  <description>map_organizer</description>
+  <description>Layered costmap organizer package</description>
 
   <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
-  <license>FRL</license>
+  <license>BSD</license>
   <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>
 
   <buildtool_depend>catkin</buildtool_depend>
