--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
   <name>planner_cspace</name>
-  <version>0.0.0</version>
-  <description>The planner package</description>
+  <version>0.1.0</version>
+  <description>3-dof configuration space planner for mobile robot</description>
 
   <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
   <license>BSD</license>
