--- a/track_odometry/package.xml
+++ b/track_odometry/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <package>
   <name>track_odometry</name>
-  <version>0.0.0</version>
-  <description>The track_odometry package</description>
+  <version>0.1.0</version>
+  <description>Odometry slip compensation package</description>
 
   <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
-  <license>FRL</license>
+  <license>BSD</license>
   <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>
 
   <buildtool_depend>catkin</buildtool_depend>
