--- a/neonavigation/package.xml
+++ b/neonavigation/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>neonavigation</name>
-  <version>0.0.0</version>
-  <description>The neonavigation package</description>
+  <version>0.1.0</version>
+  <description>The neonavigation meta-package including 3-dof configuration space planner</description>
 
   <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
   <license>BSD</license>
