--- a/neonavigation_launch/package.xml
+++ b/neonavigation_launch/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>neonavigation_launch</name>
-  <version>0.0.0</version>
-  <description>The neonavigation_launch package</description>
+  <version>0.1.0</version>
+  <description>Demonstration and sample launch files for neonavigation meta-package</description>
 
   <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
   <license>BSD</license>
