--- a/map_organizer/CMakeLists.txt
+++ b/map_organizer/CMakeLists.txt
@@ -6,7 +6,6 @@ find_package(catkin REQUIRED
   COMPONENTS
     cmake_modules
     roscpp
-    roslint
     rostest
 
     eigen_conversions
@@ -86,9 +85,9 @@ target_link_libraries(pose_transform ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 add_dependencies(pose_transform ${catkin_EXPORTED_TARGETS})
 
 
-roslint_cpp()
-
 if(CATKIN_ENABLE_TESTING)
+  find_package(roslint REQUIRED)
+  roslint_cpp()
   roslint_add_test()
 endif()
 
