--- a/obj_to_pointcloud/CMakeLists.txt
+++ b/obj_to_pointcloud/CMakeLists.txt
@@ -6,7 +6,6 @@ find_package(catkin REQUIRED
   COMPONENTS
     cmake_modules
     roscpp
-    rostest
 
     eigen_conversions
     geometry_msgs
@@ -56,6 +55,7 @@ add_dependencies(obj_to_pointcloud ${catkin_EXPORTED_TARGETS})
 
 
 if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
   find_package(roslint REQUIRED)
   roslint_cpp()
   roslint_add_test()
