Fix cmake_modules deps

--- a/obj_to_pointcloud/package.xml
+++ b/obj_to_pointcloud/package.xml
@@ -21,5 +21,6 @@
   <depend>tf</depend>
   <depend>tf_conversions</depend>
 
+  <depend>cmake_modules</depend>
   <depend>eigen</depend>
 </package>
