--- a/neonavigation/package.xml
+++ b/neonavigation/package.xml
@@ -12,6 +12,7 @@
   
   <exec_depend>costmap_cspace</exec_depend>
   <exec_depend>map_organizer</exec_depend>
+  <exec_depend>neonavigation_common</exec_depend>
   <exec_depend>neonavigation_launch</exec_depend>
   <exec_depend>obj_to_pointcloud</exec_depend>
   <exec_depend>planner_cspace</exec_depend>
