Add dependencies to neonavigation_common

--- a/map_organizer/package.xml
+++ b/map_organizer/package.xml
@@ -24,6 +24,7 @@
   <depend>tf_conversions</depend>
 
   <depend>map_organizer_msgs</depend>
+  <depend>neonavigation_common</depend>
 
   <depend>cmake_modules</depend>
   <depend>eigen</depend>
