--- a/costmap_cspace/package.xml
+++ b/costmap_cspace/package.xml
@@ -21,6 +21,7 @@
   <depend>tf2_sensor_msgs</depend>
 
   <depend>costmap_cspace_msgs</depend>
+  <depend>neonavigation_common</depend>
 
   <depend>xmlrpcpp</depend>
 </package>
