--- a/map_organizer/CMakeLists.txt
+++ b/map_organizer/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED
     tf_conversions
 
     map_organizer_msgs
+    neonavigation_common
 )
 find_package(PCL REQUIRED)
 find_package(Eigen3 REQUIRED)
@@ -42,6 +43,7 @@ catkin_package(
     tf_conversions
 
     map_organizer_msgs
+    neonavigation_common
 )
 include_directories(${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${Eigen3_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
