--- a/obj_to_pointcloud/package.xml
+++ b/obj_to_pointcloud/package.xml
@@ -21,6 +21,8 @@
   <depend>tf</depend>
   <depend>tf_conversions</depend>
 
+  <depend>neonavigation_common</depend>
+
   <depend>cmake_modules</depend>
   <depend>eigen</depend>
 </package>
