--- a/safety_limiter/package.xml
+++ b/safety_limiter/package.xml
@@ -20,6 +20,8 @@
   <depend>tf</depend>
   <depend>tf_conversions</depend>
 
+  <depend>neonavigation_common</depend>
+
   <depend>cmake_modules</depend>
   <depend>eigen</depend>
   <depend>xmlrpcpp</depend>
