--- a/track_odometry/package.xml
+++ b/track_odometry/package.xml
@@ -21,6 +21,8 @@
   <depend>tf</depend>
   <depend>trajectory_msgs</depend>
 
+  <depend>neonavigation_common</depend>
+
   <depend>cmake_modules</depend>
   <depend>eigen</depend>
 </package>
