--- a/joystick_interrupt/package.xml
+++ b/joystick_interrupt/package.xml
@@ -17,4 +17,6 @@
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>topic_tools</depend>
+
+  <depend>neonavigation_common</depend>
 </package>
