--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
   matrix:
     - ROS_DISTRO_TARGET=kinetic
     - ROS_DISTRO_TARGET=lunar
-    - ROS_DISTRO_TARGET=melodic
+    - ROS_DISTRO_TARGET=kinetic COVERAGE_TEST=true
 branches:
   only:
     - master
@@ -34,7 +34,8 @@ script:
     -e TRAVIS_PULL_REQUEST
     -e TRAVIS_REPO_SLUG
     -e TRAVIS_BOT_GITHUB_TOKEN
+    -e COVERAGE_TEST
     -e GITHUB_API_URL_BASE
     `bash <(curl -s https://codecov.io/env)`
     ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
-  - .travis/save_cache.sh
+  - [ x${COVERAGE_TEST} != "xtrue" ] && .travis/save_cache.sh || true
