--- a/costmap_cspace/package.xml
+++ b/costmap_cspace/package.xml
@@ -17,6 +17,7 @@
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>laser_geometry</depend>
+  <depend>nav_msgs</depend>
   <depend>tf</depend>
   <depend>tf2_sensor_msgs</depend>
 
