--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -20,6 +20,7 @@
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>trajectory_msgs</depend>
   <depend>tf</depend>
 
   <depend>costmap_cspace</depend>
