--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -19,6 +19,8 @@
   <depend>move_base_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>std_srvs</depend>
+  <depend>trajectory_msgs</depend>
   <depend>tf</depend>
 
   <depend>costmap_cspace</depend>
