--- a/.travis/Dockerfile.deps-test
+++ b/.travis/Dockerfile.deps-test
@@ -9,27 +9,33 @@ RUN apt-get update -qq \
 RUN echo "deb http://packages.ros.org/ros-shadow-fixed/ubuntu `lsb_release -sc` main" > /etc/apt/sources.list.d/ros-latest.list \
   && rosdep update
 
-COPY package.xml /ws/src/self/
+COPY package.xml /
 
 ARG NEONAVIGATION_VERSION="0.2.0"
 RUN cd /tmp \
+  && mkdir -p /ws/src \
   && wget -q https://github.com/at-wat/neonavigation/archive/${NEONAVIGATION_VERSION}.tar.gz \
   && tar xzfv ${NEONAVIGATION_VERSION}.tar.gz \
-  && cat /ws/src/self/package.xml | grep depend | sed -s "s/\s*//g" | sed -s "s/<[^<]*>//g" | while read pkg; do [ -d neonavigation-${NEONAVIGATION_VERSION}/$pkg ] && echo $pkg || true; done | tee /ws/deps \
+  && cat /package.xml | grep depend | sed -s "s/\s*//g" | sed -s "s/<[^<]*>//g" | while read pkg; do [ -d neonavigation-${NEONAVIGATION_VERSION}/$pkg ] && echo $pkg || true; done | tee /ws/deps \
   && cat /ws/deps | xargs -n1 -i mv neonavigation-${NEONAVIGATION_VERSION}/{} /ws/src/ \
+  && rm -rf /tmp/neonavigation-${NEONAVIGATION_VERSION} \
   && cd /ws \
   && apt-get update -qq \
   && rosdep install -y --from-paths src --ignore-src \
-  && apt-get clean && rm -rf /var/lib/apt/list/* \
+  && apt-get clean && rm -rf /var/lib/apt/lists/* \
   && source /opt/ros/${ROS_DISTRO}/setup.bash \
   && catkin_make_isolated --install --install-space /opt/ros/${ROS_DISTRO} --cmake-args -DCMAKE_BUILD_TYPE=Release \
   && rm -rf src/* devel_isolated build_isolated
 
+WORKDIR /ws
+
 COPY . /ws/src/self
 
 RUN apt-get update -qq \
-  && cd /ws \
   && rosdep install -y --from-paths src --ignore-src --skip-keys "`cat /ws/deps`" \
-  && apt-get clean && rm -rf /var/lib/apt/list/* \
-  && source /opt/ros/${ROS_DISTRO}/setup.bash \
+  && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+COPY . /ws/src/self
+
+RUN source /opt/ros/${ROS_DISTRO}/setup.bash \
   && catkin_make_isolated --install --install-space /opt/ros/${ROS_DISTRO} --cmake-args -DCMAKE_BUILD_TYPE=Release
