--- a/.travis/Dockerfile.kinetic.deps-test
+++ b/.travis/Dockerfile.kinetic.deps-test
@@ -4,6 +4,7 @@ SHELL ["bash", "-c"]
 
 RUN apt-get update -qq \
   && apt-get install -y wget \
+  && apt-get remove -y "ros-${ROS_DISTRO}-*" \
   && apt-get clean && rm -rf /var/lib/apt/list/*
 
 RUN echo "deb http://packages.ros.org/ros-shadow-fixed/ubuntu `lsb_release -sc` main" > /etc/apt/sources.list.d/ros-latest.list \
