--- a/neonavigation_launch/CMakeLists.txt
+++ b/neonavigation_launch/CMakeLists.txt
@@ -11,3 +11,9 @@ catkin_package(
 install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
 )
+install(DIRECTORY config/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config
+)
+install(DIRECTORY map/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/map
+)
